--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-  <link rel="icon" type="image/svg+xml" href="./public/favicon.webp" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.webp" />
   <meta name="author" content="Naas hajer" />
   <meta name="description" content="HRnet Application -Wealth Health" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
